--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.28.0
-pandas==2.1.0
-rapidfuzz==3.3.0
-matplotlib==3.7.2
-altair==5.1.0
+streamlit
+pandas
+rapidfuzz
+matplotlib
+altair
